# softphone-app

./: CLAUDE.md  CODECS.md  debug.sh  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  signal.rs
src-tauri/src/sip/: coming_request.rs  dialog.rs  helpers.rs  make_call.rs  message_inspector.rs  mod.rs  registration.rs  sip_logger.rs  state.rs  stun.rs
src-tauri/src/webrtc/: audio_bridge.rs  codec.rs  denoiser.rs  mod.rs
src/components/: CallControls.vue  DeviceSelector.vue  DialPad.vue  IncomingCallDialog.vue
src/components/ui/switch/: Switch.vue
src/composables/: useAudio.ts  useSipCall.ts  useSipRegistration.ts  useWebRTC.ts
src/pages/: DialPadPage.vue  RegisterPage.vue  SettingsPage.vue
src/router/: index.ts
src/utils/: configManager.ts
